<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Acronym</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_acronym_detail_view">AcronymDetailView</string>
    <string name="action_create_acronym">Create Acronym</string>
    <string name="title_activity_create_acronym">CreateAcronym</string>
    <string name="create_desc_hint">Enter a description!</string>
    <string name="create_new_letter">Add word!</string>
    <string name="create_new_word_hint">Enter new word</string>
    <string name="create_word_destroy">Remove</string>
    <string name="action_create_save">Save</string>
    <string name="title_activity_acronym_settings">AcronymSettings</string>
    <string name="settings_api_key_hint">Enter Wordnik Api Key</string>
    <string name="word_def_select_title">Select a Definition</string>
    <string name="word_def_select_custom">Enter your own definition</string>
    <string name="word_def_select_done">Done</string>

</resources>
